ui_sources += ['src/widgets/models/actions_model.cpp']
ui_sources += ['src/widgets/models/categories_model.cpp']
ui_sources += ['src/widgets/models/category_matches_model.cpp']
ui_sources += ['src/widgets/models/match_card.cpp']
ui_sources += ['src/widgets/models/players_model.cpp']
ui_sources += ['src/widgets/models/results_model.cpp']
ui_sources += ['src/widgets/models/tatami_matches_model.cpp']

ui_moc_headers += ['src/widgets/models/actions_model.hpp']
ui_moc_headers += ['src/widgets/models/categories_model.hpp']
ui_moc_headers += ['src/widgets/models/category_matches_model.hpp']
ui_moc_headers += ['src/widgets/models/players_model.hpp']
ui_moc_headers += ['src/widgets/models/results_model.hpp']
ui_moc_headers += ['src/widgets/models/tatami_matches_model.hpp']

