core_sources += ['src/core/stores/tatami/concurrent_block_group.cpp']
core_sources += ['src/core/stores/tatami/sequential_block_group.cpp']
core_sources += ['src/core/stores/tatami/tatami_list.cpp']
core_sources += ['src/core/stores/tatami/location.cpp']
core_sources += ['src/core/stores/tatami/tatami_store.cpp']

