hub_sources += ['src/ui/widgets/graphics_items/new_empty_concurrent_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/new_concurrent_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/unallocated_block_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/grid_line_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/tatami_text_graphics_item.cpp']

