hub_sources += ['src/ui/widgets/graphics_items/block_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/concurrent_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/empty_concurrent_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/grid_line_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/sequential_graphics_item.cpp']
hub_sources += ['src/ui/widgets/graphics_items/unallocated_block_graphics_item.cpp']

ui_sources += ['src/ui/widgets/graphics_items/match_graphics_item.cpp']
ui_sources += ['src/ui/widgets/graphics_items/tatami_text_graphics_item.cpp']

